# pydiceplot

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pixi.toml  pyproject.toml  readme.md  requirements.txt  setup.py
.github/workflows/: pypi-release.yml  release.yml
example_code/: _palette.py  example.py  example_domino.py  mirna_direction.py  oral_microbiome.py  oral_microbiome_fill_only.py  oral_microbiome_large.py  pathways_nine.py  zebra_domino.py
example_code/data/: ZEBRA_sex_degs_set.csv  sample_dice_data2.csv  sample_dice_large.csv  sample_dice_miRNA.csv
prototype/: _diceplot.py  example.py  example_domino.py  prototype2.py  prototype_4_dice.py
prototype/deprecated/: _diceplot.py  prototype2.py  prototype_4_dice.py
pyDicePlot/: diceplot.py  test_functions.py
pyDicePlot/plots/: _diceplot.py
pydiceplot/: __init__.py  _backend.py  _plot.py  test_functions.py  utils.py
pydiceplot/backends/: _matplotlib_backend.py
pydiceplot/plots/: _diceplot.py  _plot.py  _utils.py  utils.py
pydiceplot/plots/backend/: _matplotlib_backend.py  _plotly_backend.py
pydiceplot/plots/backends/: _dice_utils.py  _domino_utils.py  _layout.py  _matplotlib_backend.py  _plotly_backend.py  _utils.py  _utils_depr.py
tests/: test_dice_plot.py  test_domino_plot.py  test_functions.py  test_layout.py
