[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyDicePlot"
version = "0.0"
description = "Plot multidimensional categorical data"
authors = [
    { name = "Matthias Flotho", email = "Matthias.Flotho@ccb.uni-saarland.de" },
    { name = "Philipp Flotho", email = "Philipp.Flotho@uni-saarland.de" }
]
license = { text = "MIT" }
urls = { "Homepage" = "https://dice-and-domino-plot.readthedocs.io/en/latest/" }

dependencies = [
    "pandas>=1.0",
    "numpy>=1.18",
    "plotly>=5.0",
    "scipy>=1.5"
]

[tool.setuptools]
packages = ["pyDicePlot"]
