[build-system]
requires = ["setuptools>=80", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pydiceplot"
dynamic = ["version"]
description = "Dice plots for high-dimensional categorical data, with matplotlib and plotly backends"
authors = [
    { name = "Philipp Flotho" },
    { name = "Matthias Flotho" }
]
license = "MIT"
urls = { "Homepage" = "https://dice-and-domino-plot.readthedocs.io/en/latest/" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.0",
    "numpy>=1.18",
    "plotly>=5.0",
    "scipy>=1.5",
    "matplotlib>=3.5",
    "kaleido>=0.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.setuptools]
packages = ["pydiceplot", "pydiceplot.plots", "pydiceplot.plots.backends"]

[tool.setuptools_scm]
version_file = "pydiceplot/_version.py"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
tag_regex = "^v(?P<version>.+)$"
